--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="Boomerang is a responsive website template based on the well known Bootstrap framework. It's very well structured with lots of features and demos ready to be used.">
-    <meta name="keywords" content="bootstrap, responsive, template, website, html, theme, ux, ui, web, design, developer, support, business, corporate, real estate, education, school, education, demo, css, framework">
-    <meta name="author" content="Webpixels">
+    <meta name="description" content="Tia Ju - Pet Sitter | A melhor de Porto Alegre">
+    <!--<meta name="keywords" content="bootstrap, responsive, template, website, html, theme, ux, ui, web, design, developer, support, business, corporate, real estate, education, school, education, demo, css, framework">-->
+    <meta name="author" content="Benhur Külzer">
 
     <title>Tia Ju - Pet Sitter</title>
 
