--- a/azul.html
+++ b/azul.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="view/css/plugin/jquery.fancybox.min.css">
 
     <!-- Global style (main) -->
-    <link id="stylesheet" type="text/css" href="view/css/boomerang-startup-agency.min.css" rel="stylesheet" media="screen">
+    <link id="stylesheet" type="text/css" href="view/css/azul-boomerang-startup-agency.min.css" rel="stylesheet" media="screen">
 
 </head>
 
@@ -79,7 +79,7 @@
 
                                                 <ul class="dropdown-menu">
                                                     <li class="dropdown">
-                                                        <a href="azul.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Azul</a>
+                                                        <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Azul</a>
                                                         <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Rosa</a>
                                                         <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Verde</a>
                                                         <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gradiente</a>
