--- a/gradiente.html
+++ b/gradiente.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="view/css/plugin/jquery.fancybox.min.css">
 
     <!-- Global style (main) -->
-    <link id="stylesheet" type="text/css" href="view/css/boomerang-startup-agency.min.css" rel="stylesheet" media="screen">
+    <link id="stylesheet" type="text/css" href="view/css/gradiente-boomerang-startup-agency.min.css" rel="stylesheet" media="screen">
 
 </head>
 
@@ -65,7 +65,7 @@
                                                 <a href="#" class="nav-link">Home</a>
                                             </li>
                                             <li class="nav-item dropdown">
-                                                <a href="Clientes.html" class="nav-link">Nossos Bichanos</a>
+                                                <a href="#" class="nav-link">Nossos Bichanos</a>
                                             </li>
                                             <li class="nav-item dropdown">
                                                 <a href="#" class="nav-link">Orçamentos</a>
@@ -92,7 +92,7 @@
                             </nav>
                         </div>
 
-                        <section class="slice slice--offset-top bg-base-1 bg-size-cover" style="background-image: url(https://i.imgur.com/tZ4FbTD.jpg);background-position: bottom center;">
+                        <section class="slice slice--offset-top bg-base-1 bg-size-cover" style="background-image: url(https://i.imgur.com/tZ4FbTD.jpg) !important; background-position: bottom center !important;">
                             <span class="mask mask-base-1--style-1"></span>
                             <div class="container">
                                 <div class="row">
