--- a/verde.html
+++ b/verde.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="view/css/plugin/jquery.fancybox.min.css">
 
     <!-- Global style (main) -->
-    <link id="stylesheet" type="text/css" href="view/css/boomerang-startup-agency.min.css" rel="stylesheet" media="screen">
+    <link id="stylesheet" type="text/css" href="view/css/verde-boomerang-startup-agency.min.css" rel="stylesheet" media="screen">
 
 </head>
 
@@ -65,7 +65,7 @@
                                                 <a href="#" class="nav-link">Home</a>
                                             </li>
                                             <li class="nav-item dropdown">
-                                                <a href="Clientes.html" class="nav-link">Nossos Bichanos</a>
+                                                <a href="#" class="nav-link">Nossos Bichanos</a>
                                             </li>
                                             <li class="nav-item dropdown">
                                                 <a href="#" class="nav-link">Orçamentos</a>
