commit do orçamento
commit do orçamento

--- a/Orcamentos.html
+++ b/Orcamentos.html
@@ -186,25 +186,6 @@
                                     		</div>
 
                                     		<div class="row">
-                                    			<div class="col-md-12">
-                                    				<div class="checkbox">
-                                                        <div class="col-md-4">
-                                        					<input type="checkbox" name="txtCaesC" id="txtCaesC">
-                                        					<label for="txtCaesC">Cães</label>
-                                                        </div>
-
-                                                        <div class="col-md-4">
-                                        					<input type="checkbox" name="txtGatosC" id="txtGatosC">
-                                                            <label for="txtGatosC">Gatos</label>
-                                                        </div>
-
-                                                        <div class="col-md-4">
-                                        					<input type="checkbox" name="txtOutrosC" id="txtOutrosC">
-                                                            <label for="txtOutrosC">Outros Animais</label>
-                                                        </div>
-                                    				</div>
-                                    			</div>
-
                                                 <div class="col-md-4">
                                                     <div>
                                                         <span>Cães</span>
@@ -212,7 +193,7 @@
 
                                                     <label>
                                                         <img src="https://image.flaticon.com/icons/svg/616/616408.svg" class="img-thumbnail img-check" style='width: 100px;'>
-                                                        <input type="checkbox" name="chk2" id="item1" value="val1" class="hidden" autocomplete="off">
+                                                        <input type="checkbox" name="txtCaesC" id="txtCaesC" value="val1" class="hidden" autocomplete="off">
                                                     </label>
 
                                                     <input type="numer" class="form-control form-control-lg" name="QtdCaes" id="QtdCaes" placeholder="Quantidade de Cães" required="">
@@ -225,7 +206,7 @@
 
                                                     <label>
                                                         <img src="https://image.flaticon.com/icons/svg/616/616430.svg" class="img-thumbnail img-check" style='width: 100px;'>
-                                                        <input type="checkbox" name="chk2" id="item2" value="val2" class="hidden" autocomplete="off">
+                                                        <input type="checkbox" name="txtGatosC" id="txtGatosC" value="val2" class="hidden" autocomplete="off">
                                                     </label>
 
                                                     <input type="numer" class="form-control form-control-lg" name="QtdGatos" id="QtdGatos" placeholder="Quantidade de Gatos" required="">
@@ -238,7 +219,7 @@
 
                                                     <label>
                                                         <img src="view/img/brand/outros.png" class="img-thumbnail img-check" style='width: 100px;'>
-                                                        <input type="checkbox" name="chk3" id="item3" value="val3" class="hidden" autocomplete="off">
+                                                        <input type="checkbox" name="txtOutrosC" id="txtOutrosC" value="val3" class="hidden" autocomplete="off">
                                                     </label>
 
                                                     <input type="numer" class="form-control form-control-lg" name="QtdAnimais" id="QtdAnimais" placeholder="Quantidade de Animais" required="">
